--- a/package.json
+++ b/package.json
@@ -83,8 +83,8 @@
     "lodash": "^4.17.10",
     "mocha": "^2.3.4",
     "phantomjs2": "^2.0.2",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-transform-hmr": "^1.0.1",
     "rimraf": "^2.4.4",
     "standard": "^5.4.1",
