--- a/package.json
+++ b/package.json
@@ -73,16 +73,15 @@
     "gh-pages": "^0.8.0",
     "html-webpack-plugin": "^1.7.0",
     "karma": "^0.13.15",
+    "karma-chrome-launcher": "^3.2.0",
     "karma-junit-reporter": "^0.3.8",
     "karma-mocha": "^0.2.1",
-    "karma-phantomjs2-launcher": "^0.3.2",
     "karma-sourcemap-loader": "^0.3.6",
     "karma-spec-reporter": "0.0.23",
     "karma-webpack": "^1.7.0",
     "latinize": "^0.2.0",
     "lodash": "^4.17.10",
     "mocha": "^2.3.4",
-    "phantomjs2": "^2.0.2",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-transform-hmr": "^1.0.1",
