--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "react-highlight-words",
-  "version": "0.20.0",
+  "name": "@pigsty/react-highlight-words",
+  "version": "0.21.1",
   "description": "React component to highlight words within a larger body of text",
   "main": "dist/main.js",
+  "types": "dist/main.d.ts",
   "scripts": {
     "build": "npm run build:website && npm run build:dist",
     "build:website": "npm run clean:website && cross-env NODE_ENV=production webpack --config webpack.config.website.js -p --bail",
@@ -21,14 +22,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bvaughn/react-highlight-words.git"
+    "url": "git+https://github.com/andrzej-woof/react-highlight-words.git"
   },
   "author": "Brian Vaughn",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/bvaughn/react-highlight-words/issues"
+    "url": "https://github.com/andrzej-woof/react-highlight-words/issues"
   },
-  "homepage": "https://github.com/bvaughn/react-highlight-words#readme",
+  "homepage": "https://github.com/andrzej-woof/react-highlight-words#readme",
   "keywords": [
     "react",
     "reactjs",
@@ -65,6 +66,7 @@
     "babel-eslint": "^4.1.6",
     "babel-loader": "^5.4.0",
     "babel-plugin-react-transform": "^1.1.1",
+    "copy-webpack-plugin": "^4",
     "cross-env": "^5.1.3",
     "css-loader": "^0.23.0",
     "cssnext": "^1.8.4",
