--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pigsty/react-highlight-words",
-  "version": "0.21.3",
+  "version": "0.21.4",
   "description": "React component to highlight words within a larger body of text",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
@@ -84,8 +84,8 @@
     "latinize": "^0.2.0",
     "lodash": "^4.17.10",
     "mocha": "^2.3.4",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-transform-hmr": "^1.0.1",
     "rimraf": "^2.4.4",
     "standard": "^5.4.1",
@@ -101,6 +101,6 @@
     "prop-types": "^15.5.8"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0 || ^16.0.0-0 || ^17.0.0-0 || ^18.0.0-0"
+    "react": "^0.14.0 || ^15.0.0 || ^16.0.0-0 || ^17.0.0-0 || ^18.0.0-0 || ^19.0.0-0"
   }
 }
