--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pigsty/react-highlight-words",
-  "version": "0.21.4",
+  "version": "0.22.0",
   "description": "React component to highlight words within a larger body of text",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
@@ -16,7 +16,7 @@
     "prebuild": "npm run lint",
     "prepublishOnly": "npm run build",
     "postpublish": "npm run deploy",
-    "start": "webpack-dev-server --hot --inline --config webpack.config.dev.js",
+    "start": "webpack-dev-server --hot --config webpack.config.dev.js",
     "test": "cross-env NODE_ENV=test karma start",
     "watch": "watch 'clear && npm run lint -s && npm run test -s' src"
   },
@@ -44,7 +44,6 @@
     "search"
   ],
   "standard": {
-    "parser": "babel-eslint",
     "ignore": [
       "build",
       "dist",
@@ -61,39 +60,38 @@
     ]
   },
   "devDependencies": {
-    "babel": "^5.8.34",
-    "babel-core": "^5.8.34",
-    "babel-eslint": "^4.1.6",
-    "babel-loader": "^5.4.0",
-    "babel-plugin-react-transform": "^1.1.1",
-    "copy-webpack-plugin": "^4",
-    "cross-env": "^5.1.3",
-    "css-loader": "^0.23.0",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "babel-loader": "^9.2.1",
+    "copy-webpack-plugin": "^12.0.2",
+    "cross-env": "^7.0.3",
+    "css-loader": "^7.1.2",
     "cssnext": "^1.8.4",
     "cssnext-loader": "^1.0.1",
     "expect.js": "^0.3.1",
-    "gh-pages": "^0.8.0",
-    "html-webpack-plugin": "^1.7.0",
-    "karma": "^0.13.15",
+    "gh-pages": "^6.2.0",
+    "html-webpack-plugin": "^5.6.3",
+    "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
-    "karma-junit-reporter": "^0.3.8",
-    "karma-mocha": "^0.2.1",
-    "karma-sourcemap-loader": "^0.3.6",
-    "karma-spec-reporter": "0.0.23",
-    "karma-webpack": "^1.7.0",
-    "latinize": "^0.2.0",
+    "karma-junit-reporter": "^2.0.1",
+    "karma-mocha": "^2.0.1",
+    "karma-sourcemap-loader": "^0.4.0",
+    "karma-spec-reporter": "0.0.36",
+    "karma-webpack": "^5.0.1",
+    "latinize": "^2.0.0",
     "lodash": "^4.17.10",
-    "mocha": "^2.3.4",
+    "mocha": "^11.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-transform-hmr": "^1.0.1",
-    "rimraf": "^2.4.4",
-    "standard": "^5.4.1",
-    "style-loader": "^0.13.0",
-    "watch": "^0.16.0",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0",
-    "worker-loader": "^0.7.0"
+    "rimraf": "^6.0.1",
+    "standard": "^17.1.2",
+    "style-loader": "^4.0.0",
+    "watch": "^1.0.2",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.2.0",
+    "worker-loader": "^3.0.8"
   },
   "dependencies": {
     "highlight-words-core": "^1.2.0",
