--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
   "scripts": {
-    "build": "npm run build:website && npm run build:dist",
-    "build:website": "npm run clean:website && cross-env NODE_ENV=production webpack --config webpack.config.website.js --mode=production --bail",
-    "build:dist": "npm run clean:dist && cross-env NODE_ENV=production webpack --config webpack.config.dist.cjs.js --bail && cross-env NODE_ENV=production webpack --config webpack.config.dist.umd.js --bail",
-    "clean": "npm run clean:website && npm run clean:dist",
+    "build": "build:website && build:dist",
+    "build:website": "clean:website && cross-env NODE_ENV=production webpack --config webpack.config.website.js --mode=production --bail",
+    "build:dist": "clean:dist && cross-env NODE_ENV=production webpack --config webpack.config.dist.cjs.js --bail && cross-env NODE_ENV=production webpack --config webpack.config.dist.umd.js --bail",
+    "clean": "clean:website && clean:dist",
     "clean:website": "rimraf build",
     "clean:dist": "rimraf dist",
     "deploy": "gh-pages -d build",
     "lint": "standard",
-    "prebuild": "npm run lint",
-    "prepublishOnly": "npm run build",
-    "postpublish": "npm run deploy",
+    "prebuild": "lint",
+    "prepublishOnly": "build",
+    "postpublish": "deploy",
     "start": "webpack-dev-server --hot --config webpack.config.dev.js",
     "test": "cross-env NODE_ENV=test karma start",
-    "watch": "watch 'clear && npm run lint -s && npm run test -s' src"
+    "watch": "watch 'clear && lint -s && test -s' src"
   },
   "repository": {
     "type": "git",
@@ -66,8 +66,6 @@
     "copy-webpack-plugin": "^12.0.2",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
-    "cssnext": "^1.8.4",
-    "cssnext-loader": "^1.0.1",
     "expect.js": "^0.3.1",
     "gh-pages": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
